<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/pronostico_dia_actual">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_dia_actual"
        android:id="@+id/pronostico_dia_actual_fecha"
        android:textColor="#25A8E0"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textStyle="bold" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/layout_ciudad1_dia_1_interno"
        android:weightSum="1"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:id="@+id/layout_ciudad1_dia_1_mañana"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.50"
            android:background="@drawable/borde">

            <TextView
                android:layout_width="156dp"
                android:layout_height="wrap_content"
                android:text="@string/mañana"
                android:id="@+id/ciudad1_dia_1_mañana"
                android:textColor="#ffffffff"
                android:textSize="25sp"
                android:layout_gravity="center_horizontal"
                android:gravity="center" />

            <ImageView
                android:layout_width="93dp"
                android:layout_height="93dp"
                android:id="@+id/ciudad1_dia_1_estado_tiempo_mañana"
                android:longClickable="false"
                android:contentDescription="@string/p1_estado_tiempo_mañana"
                android:src="@drawable/dia_nubosidad_muy_baja"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/ciudad1_dia_1_mañana_max_min"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="10sp"
                    android:layout_height="10sp"
                    android:id="@+id/ciudad1_dia_1_mañana_icono_minima"
                    android:src="@drawable/min"
                    android:contentDescription="@string/p1_minima"
                    android:layout_gravity="center"
                    android:layout_marginLeft="3sp"
                    android:layout_marginRight="3sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p1_dia_1_rango"
                    android:id="@+id/ciudad1_dia_1_mañana_rango_temperaturas"
                    android:textColor="#ffffffff"
                    android:textSize="25sp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center" />

                <ImageView
                    android:layout_width="10sp"
                    android:layout_height="10sp"
                    android:id="@+id/ciudad1_dia_1_mañana_icono_maxima"
                    android:src="@drawable/max"
                    android:contentDescription="@string/p1_minima"
                    android:layout_gravity="center"
                    android:layout_marginRight="3sp"
                    android:layout_marginLeft="3sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:id="@+id/layout_ciudad1_dia_1_tarde"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.50"
            android:background="@drawable/borde">

            <TextView
                android:layout_width="156dp"
                android:layout_height="wrap_content"
                android:text="@string/tarde"
                android:id="@+id/dia_1_tarde"
                android:textColor="#ffffffff"
                android:textSize="25sp"
                android:layout_gravity="center_horizontal"
                android:gravity="center" />

            <ImageView
                android:layout_width="93dp"
                android:layout_height="93dp"
                android:id="@+id/dia_1_estado_tiempo_tarde"
                android:longClickable="false"
                android:contentDescription="@string/p1_estado_tiempo_mañana"
                android:src="@drawable/dia_nubosidad_media"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/dia_1_tarde_max_min"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="10sp"
                    android:layout_height="10sp"
                    android:id="@+id/dia_1_tarde_icono_clima"
                    android:src="@drawable/min"
                    android:contentDescription="@string/p1_minima"
                    android:layout_gravity="center"
                    android:layout_marginLeft="3sp"
                    android:layout_marginRight="3sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p1_dia_1_rango"
                    android:id="@+id/dia_1_tarde_rango_temperaturas"
                    android:textColor="#ffffffff"
                    android:textSize="25sp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center" />

                <ImageView
                    android:layout_width="10sp"
                    android:layout_height="10sp"
                    android:id="@+id/dia_1_tarde_icono_maxima"
                    android:src="@drawable/max"
                    android:contentDescription="@string/p1_minima"
                    android:layout_gravity="center"
                    android:layout_marginRight="3sp"
                    android:layout_marginLeft="3sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    </LinearLayout>

</LinearLayout>