<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_centerVertical="true"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="fill_parent"
        android:background="#ff2b2b2b"
        android:id="@+id/scroll_ciudad">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/pronostico_ciudad"
            android:background="@drawable/fondo_azul">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_ciudad"
                android:id="@+id/ciudad_nombre"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="#ffffffff"
                android:layout_gravity="center_horizontal" />

            <ImageView
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:id="@+id/estado_tiempo"
                android:background="@drawable/dia_soleado"
                android:layout_marginTop="23dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_dia_actual"
            android:layout_marginBottom="10dp">

            <TextView android:text="@string/main_temperatura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/estado_tiempo_temperatura"
                android:layout_gravity="center|top"
                android:textColor="#ffffffff"
                android:textSize="80sp"
                android:layout_margin="5sp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5sp"
                android:gravity="center_vertical|center_horizontal"
                android:layout_gravity="center">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/layout_dia_actual_sensacion_termica">

                    <ImageView
                        android:layout_width="20dip"
                        android:layout_height="20dip"
                        android:id="@+id/icono_sensacion_termica"
                        android:src="@drawable/temperatura"
                        android:layout_marginTop="2sp"
                        android:layout_marginLeft="3sp"
                        android:contentDescription="" />

                    <TextView
                        android:text="@string/main_sensacion_termica"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/estado_tiempo_sensacion_termica"
                        android:layout_gravity="center_vertical"
                        android:textColor="#ffffffff"
                        android:textSize="16sp"
                        android:layout_marginLeft="10dip" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <ImageView
                        android:layout_width="20dip"
                        android:layout_height="20dip"
                        android:id="@+id/icono_max_min"
                        android:src="@drawable/minmax"
                        android:layout_marginTop="2sp"
                        android:layout_marginLeft="3sp" />

                    <TextView
                        android:text="@string/main_max_min"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/estado_tiempo_max_min"
                        android:layout_gravity="center_vertical"
                        android:textColor="#ffffffff"
                        android:textSize="16sp"
                        android:layout_marginLeft="10dip" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <ImageView
                        android:layout_width="20dip"
                        android:layout_height="20dip"
                        android:id="@+id/icono_humedad"
                        android:src="@drawable/humedad"
                        android:layout_marginTop="2sp"
                        android:layout_marginLeft="3sp" />

                    <TextView
                        android:text="@string/main_humedad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/estado_tiempo_humedad"
                        android:layout_gravity="center_vertical"
                        android:textColor="#ffffffff"
                        android:textSize="16sp"
                        android:layout_marginLeft="10dip" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <ImageView
                        android:layout_width="20dip"
                        android:layout_height="20dip"
                        android:id="@+id/icono_velocidad_viento"
                        android:src="@drawable/viento"
                        android:layout_marginTop="2sp"
                        android:layout_marginLeft="3sp" />

                    <TextView
                        android:text="@string/main_velocidad_viento"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/estado_tiempo_velocidad_viento"
                        android:layout_gravity="center_vertical"
                        android:textColor="#ffffffff"
                        android:textSize="16sp"
                        android:layout_marginLeft="10dip" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <ImageView
                        android:layout_width="20dip"
                        android:layout_height="20dip"
                        android:id="@+id/icono_direccion_viento"
                        android:src="@drawable/direccion"
                        android:layout_marginTop="2sp"
                        android:layout_marginLeft="3sp" />

                    <TextView
                        android:text="@string/main_direccion_viento"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/estado_tiempo_direccion_viento"
                        android:layout_gravity="center_vertical"
                        android:textColor="#ffffffff"
                        android:textSize="16sp"
                        android:layout_marginLeft="10dip" />
                </LinearLayout>

                </LinearLayout>

            </LinearLayout>


            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/scroll_dias_pronostico"
                android:background="#ff2b2b2b">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/layout_scroller">



                </LinearLayout>

                </HorizontalScrollView>


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:background="#ff2b2b2b"
                android:id="@+id/pronostico_extendido">

            </LinearLayout>

            <com.example.smn.smn.AreaGraphView
                android:background="#ff2b2b2b"
                android:id="@+id/grafico_temperaturas"
                android:layout_width="wrap_content"
                android:layout_height="200dip"/>


            </LinearLayout>

    </ScrollView>
</LinearLayout>
