<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/drawer_layout"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context="com.example.smn.smn.AjustesActivity">

    <!-- As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions. -->
    <FrameLayout android:id="@+id/container" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/abc_action_bar_default_padding_material"
        android:background="@color/primary_material_dark">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/scrollView"
            android:layout_gravity="left|top" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <!-- Clickable title -->
                <TextView android:id="@+id/ajustes_titulo_1"
                    android:text="@string/ajustes_titulo_1"
                    style="@style/ajustesGrupo"
                    android:clickable="true" />
                <!--android:onClick="toggle_contents"-->

                <!--content to hide/show -->
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/ajustes_seccion_1"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true">

                    <View style="@style/division" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/ajustes_ciudades">



                    </LinearLayout>

                    <View style="@style/division" />

                    <AutoCompleteTextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ajustes_elegir_ciudad"
                        style="@style/ajustesTextoAutoComplete"
                        android:id="@+id/buscar"
                        android:drawableLeft="@android:drawable/ic_menu_search" />


                </LinearLayout>





                <!-- Clickable title -->
                <TextView android:id="@+id/ajustes_titulo_2"
                    android:text="@string/ajustes_titulo_2"
                    style="@style/ajustesGrupo"
                    android:clickable="true" />
                <!--android:onClick="toggle_contents"-->

                <!--content to hide/show -->
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/ajustes_seccion_2">

                    <View style="@style/division" />

                    <RelativeLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        style="@style/ajustesFilaImpar"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">

                        <TextView
                            android:text="@string/ajustes_unidades"
                            android:layout_height="match_parent"
                            android:layout_width="wrap_content"
                            style="@style/ajustesTexto"
                            android:layout_alignParentBottom="false"
                            android:layout_alignParentTop="false"
                            android:layout_centerVertical="true" />

                        <ToggleButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/toggleUnidades"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true" />


                    </RelativeLayout>

                    <View style="@style/division" />

                    <RelativeLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        style="@style/ajustesFilaPar"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">

                        <TextView
                            android:text="@string/ajustes_notificaciones"
                            android:layout_height="match_parent"
                            android:layout_width="wrap_content"
                            style="@style/ajustesTexto"
                            android:layout_alignParentBottom="false"
                            android:layout_alignParentTop="false"
                            android:layout_centerVertical="true" />

                        <ToggleButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/toggleNotificaciones"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true" />


                    </RelativeLayout>

                    <View style="@style/division" />

                </LinearLayout>


            </LinearLayout>

        </ScrollView>

    </FrameLayout>

    <!-- android:layout_gravity="start" tells DrawerLayout to treat
    this as a sliding drawer on the left side for left-to-right
    languages and on the right side for right-to-left languages.
    If you're not building against API 17 or higher, use
    android:layout_gravity="left" instead. -->
    <!-- The drawer is given a fixed width in dp and extends the full height of
         the container. -->
    <fragment android:id="@+id/navigation_drawer"
        android:layout_width="@dimen/navigation_drawer_width" android:layout_height="match_parent"
        android:layout_gravity="start" android:name="com.example.smn.smn.NavigationDrawerFragment"
        tools:layout="@layout/fragment_navigation_drawer" />

</android.support.v4.widget.DrawerLayout>
